--- a/index-new.html
+++ b/index-new.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ctxSip - Modern UI</title>
+    <title>Telenova Phone</title>
     <link rel="icon" type="image/gif" href="img/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="css/ctxSip-modern.css" rel="stylesheet" type="text/css" />
@@ -17,7 +17,7 @@
     <div class="status-bar">
         <div id="txtRegStatus" class="reg-status"></div>
         <div class="status-icons">
-            <button class="config-btn" id="btnConfig" title="Settings">
+            <button class="config-btn" id="btnConfig" title="Configurações">
                 <i class="fas fa-cog"></i>
             </button>
         </div>
@@ -33,23 +33,23 @@
                     <i class="fas fa-user"></i>
                 </div>
             </div>
-            <h2 class="contact-name">ctxSip Phone</h2>
-            <p class="status-text">Ready to make calls</p>
+            <h2 class="contact-name">Telenova Phone</h2>
+            <p class="status-text">Pronto para fazer chamadas</p>
             
             <!-- Dial Input -->
             <div class="dial-input-container">
-                <input type="text" id="numDisplay" class="dial-input" placeholder="Enter number..." autocomplete="off" />
+                <input type="text" id="numDisplay" class="dial-input" placeholder="Digite o número..." autocomplete="off" />
             </div>
 
             <!-- Action Buttons Grid -->
             <div class="action-buttons">
-                <button class="action-btn" id="btnKeypad" title="Keypad">
+                <button class="action-btn" id="btnKeypad" title="Teclado">
                     <i class="fas fa-th"></i>
-                    <span>Keypad</span>
+                    <span>Teclado</span>
                 </button>
-                <button class="action-btn" id="btnHistory" title="History">
+                <button class="action-btn" id="btnHistory" title="Histórico">
                     <i class="fas fa-clock-rotate-left"></i>
-                    <span>History</span>
+                    <span>Histórico</span>
                 </button>
                 <button class="action-btn" id="btnVolume" title="Volume">
                     <i class="fas fa-volume-up"></i>
@@ -70,48 +70,48 @@
                     <i class="fas fa-user"></i>
                 </div>
             </div>
-            <h2 class="contact-name" id="activeCallName">Contact</h2>
+            <h2 class="contact-name" id="activeCallName">Contato</h2>
             <div class="call-timer" id="callTimer">00:00:00</div>
             <div class="call-number" id="activeCallNumber">+000 000 0000</div>
             <div id="txtCallStatus" class="call-status-text"></div>
 
             <!-- In-Call Action Buttons (3x3 Grid) -->
             <div class="incall-actions">
-                <button class="incall-btn" id="btnAddCall" title="Add Call">
+                <button class="incall-btn" id="btnAddCall" title="Adicionar">
                     <i class="fas fa-user-plus"></i>
-                    <span>Add</span>
+                    <span>Adicionar</span>
                 </button>
-                <button class="incall-btn" id="btnInCallKeypad" title="Keypad">
+                <button class="incall-btn" id="btnInCallKeypad" title="Teclado">
                     <i class="fas fa-th"></i>
-                    <span>Keypad</span>
+                    <span>Teclado</span>
                 </button>
-                <button class="incall-btn" id="btnMute" title="Mute">
+                <button class="incall-btn" id="btnMute" title="Mudo">
                     <i class="fas fa-microphone"></i>
-                    <span>Mute</span>
+                    <span>Mudo</span>
                 </button>
-                <button class="incall-btn" id="btnVideo" title="Video">
+                <button class="incall-btn" id="btnVideo" title="Vídeo">
                     <i class="fas fa-video"></i>
-                    <span>Video</span>
+                    <span>Vídeo</span>
                 </button>
-                <button class="incall-btn" id="btnSpeaker" title="Speaker">
+                <button class="incall-btn" id="btnSpeaker" title="Alto-falante">
                     <i class="fas fa-volume-up"></i>
-                    <span>Speaker</span>
+                    <span>Alto-falante</span>
                 </button>
-                <button class="incall-btn" id="btnHold" title="Hold">
+                <button class="incall-btn" id="btnHold" title="Reter">
                     <i class="fas fa-pause"></i>
-                    <span>Hold</span>
+                    <span>Reter</span>
                 </button>
-                <button class="incall-btn" id="btnTransfer" title="Transfer">
+                <button class="incall-btn" id="btnTransfer" title="Transferir">
                     <i class="fas fa-right-left"></i>
-                    <span>Transfer</span>
+                    <span>Transferir</span>
                 </button>
-                <button class="incall-btn" id="btnDTMF" title="DTMF">
+                <button class="incall-btn" id="btnDTMF" title="Não Perturbe">
                     <i class="fas fa-moon"></i>
-                    <span>DND</span>
+                    <span>NP</span>
                 </button>
-                <button class="incall-btn" id="btnWarm" title="Warm Transfer">
+                <button class="incall-btn" id="btnWarm" title="Transferência Assistida">
                     <i class="fas fa-sun"></i>
-                    <span>Warm</span>
+                    <span>Assistida</span>
                 </button>
             </div>
 
@@ -127,7 +127,7 @@
     <div id="keypad-modal" class="modal">
         <div class="modal-content keypad-content">
             <div class="modal-header">
-                <h3>Keypad</h3>
+                <h3>Teclado</h3>
                 <button class="modal-close" id="closeKeypad">&times;</button>
             </div>
             <div class="keypad-display">
@@ -148,7 +148,7 @@
                 <button class="keypad-btn" data-digit="#">#<span>&nbsp;</span></button>
             </div>
             <button class="keypad-action-btn" id="keypadSend">
-                <i class="fas fa-paper-plane"></i> Send
+                <i class="fas fa-paper-plane"></i> Enviar
             </button>
         </div>
     </div>
@@ -157,14 +157,14 @@
     <div id="history-modal" class="modal">
         <div class="modal-content history-content">
             <div class="modal-header">
-                <h3>Recent Calls</h3>
+                <h3>Chamadas Recentes</h3>
                 <button class="modal-close" id="closeHistory">&times;</button>
             </div>
             <div id="sip-logitems" class="history-list">
-                <p class="empty-state">No recent calls from this browser.</p>
+                <p class="empty-state">Nenhuma chamada recente neste navegador.</p>
             </div>
             <button class="history-clear-btn" id="clearHistory">
-                <i class="fas fa-trash"></i> Clear History
+                <i class="fas fa-trash"></i> Limpar Histórico
             </button>
         </div>
     </div>
@@ -189,32 +189,32 @@
     <div id="config-modal" class="modal">
         <div class="modal-content config-content">
             <div class="modal-header">
-                <h3>Settings</h3>
+                <h3>Configurações</h3>
                 <button class="modal-close" id="closeConfig">&times;</button>
             </div>
             <div class="config-form">
                 <div class="form-group">
-                    <label>Display Name</label>
-                    <input type="text" id="cfgDisplay" class="config-input" placeholder="Your Name" />
+                    <label>Nome de Exibição</label>
+                    <input type="text" id="cfgDisplay" class="config-input" placeholder="Seu Nome" />
                 </div>
                 <div class="form-group">
-                    <label>SIP User</label>
+                    <label>Usuário SIP</label>
                     <input type="text" id="cfgUser" class="config-input" placeholder="1000" />
                 </div>
                 <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" id="cfgPassword" class="config-input" placeholder="Password" />
+                    <label>Senha</label>
+                    <input type="password" id="cfgPassword" class="config-input" placeholder="Senha" />
                 </div>
                 <div class="form-group">
-                    <label>Realm/Domain</label>
-                    <input type="text" id="cfgRealm" class="config-input" placeholder="sip.example.com" />
+                    <label>Domínio/Realm</label>
+                    <input type="text" id="cfgRealm" class="config-input" placeholder="sip.exemplo.com" />
                 </div>
                 <div class="form-group">
-                    <label>WebSocket Server</label>
-                    <input type="text" id="cfgWSServer" class="config-input" placeholder="wss://sip.example.com:7443" />
+                    <label>Servidor WebSocket</label>
+                    <input type="text" id="cfgWSServer" class="config-input" placeholder="wss://sip.exemplo.com:7443" />
                 </div>
                 <button class="config-save-btn" id="btnSaveConfig">
-                    <i class="fas fa-save"></i> Save & Reload
+                    <i class="fas fa-save"></i> Salvar e Recarregar
                 </button>
             </div>
         </div>
