--- a/index-new.html
+++ b/index-new.html
@@ -41,6 +41,22 @@
                 <input type="text" id="numDisplay" class="dial-input" placeholder="Digite o número..." autocomplete="off" />
             </div>
 
+            <!-- Numeric Keypad -->
+            <div class="numeric-keypad">
+                <button class="num-btn" data-num="1">1</button>
+                <button class="num-btn" data-num="2">2</button>
+                <button class="num-btn" data-num="3">3</button>
+                <button class="num-btn" data-num="4">4</button>
+                <button class="num-btn" data-num="5">5</button>
+                <button class="num-btn" data-num="6">6</button>
+                <button class="num-btn" data-num="7">7</button>
+                <button class="num-btn" data-num="8">8</button>
+                <button class="num-btn" data-num="9">9</button>
+                <button class="num-btn" data-num="*">*</button>
+                <button class="num-btn" data-num="0">0</button>
+                <button class="num-btn" data-num="#">#</button>
+            </div>
+
             <!-- Action Buttons Grid -->
             <div class="action-buttons">
                 <button class="action-btn" id="btnKeypad" title="Teclado">
