--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
                 </div>
                 <div class="form-group">
                     <label>Domínio/Realm</label>
-                    <input type="text" id="cfgRealm" class="config-input" placeholder="sip.exemplo.com" />
+                    <input type="text" id="cfgRealm" class="config-input" placeholder="pabx01.telenova.com.br" value="pabx01.telenova.com.br" />
                 </div>
                 <div class="form-group">
                     <label>Servidor WebSocket</label>
-                    <input type="text" id="cfgWSServer" class="config-input" placeholder="wss://sip.exemplo.com:7443" />
+                    <input type="text" id="cfgWSServer" class="config-input" placeholder="wss://pabx01.telenova.com.br:7443" value="wss://pabx01.telenova.com.br:7443" />
                 </div>
                 <button class="config-save-btn" id="btnSaveConfig">
                     <i class="fas fa-save"></i> Salvar e Recarregar
