--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <h2 class="contact-name">Telenova Phone</h2>
-            <p class="status-text">Pronto para fazer chamadas</p>
+            <p class="status-text"><span class="status-indicator" id="statusIndicator"></span>Pronto para fazer chamadas</p>
             
             <!-- Dial Input -->
             <div class="dial-input-container">
