--- a/index.html
+++ b/index.html
@@ -127,10 +127,15 @@
                 </button>
             </div>
 
-            <!-- End Call Button -->
-            <button class="call-button call-end" id="btnHangup">
-                <i class="fas fa-phone"></i>
-            </button>
+            <!-- Call Action Buttons -->
+            <div class="call-action-buttons">
+                <button class="call-button call-answer" id="btnAnswer" style="display:none;">
+                    <i class="fas fa-phone"></i>
+                </button>
+                <button class="call-button call-end" id="btnHangup">
+                    <i class="fas fa-phone"></i>
+                </button>
+            </div>
         </div>
 
     </div>
