--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <!-- Call Action Buttons -->
             <div class="call-action-buttons">
-                <button class="call-button call-answer" id="btnAnswer" style="display:none;">
+                <button class="call-button call-answer" id="btnAnswer">
                     <i class="fas fa-phone"></i>
                 </button>
                 <button class="call-button call-end" id="btnHangup">
