Fix: Corrige modal de configuração e visibilidade dos botões de chamada.

--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
             <div class="config-form">
                 <div class="form-group">
                     <label>Nome de Exibição</label>
-                    <input type="text" id="cfgDisplay" class="config-input" placeholder="Seu Nome" />
+                    <input type="text" id="cfgDisplay" class="config-input" placeholder="Nome do Atendente" />
                 </div>
                 <div class="form-group">
                     <label>Usuário SIP</label>
-                    <input type="text" id="cfgUser" class="config-input" placeholder="1000" />
+                    <input type="text" id="cfgUser" class="config-input" value="1000" />
                 </div>
                 <div class="form-group">
                     <label>Senha</label>
