Fix: Correção final do áudio usando polling contínuo e autoplay no elemento de áudio.

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 <audio id="ringtone" src="sounds/incoming.mp3" loop></audio>
 <audio id="ringbacktone" src="sounds/outgoing.mp3" loop></audio>
 <audio id="dtmfTone" src="sounds/dtmf.mp3"></audio>
-<audio id="audioRemote"></audio>
+<audio id="audioRemote" autoplay></audio>
 
 <!-- Scripts -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
